@@ -1,3 +1,9 @@
+2021-02-10  Allen D. Ball  <ball@hcf.dev>
+
+	* src/main/java/galyleo/server/Server.java:
+	Added isComplete(String) to interface and implemented
+	is_complete_request/is_complete_reply.
+
 2021-02-09  Allen D. Ball  <ball@hcf.dev>
 
 	* Track Connections in the Server and associate a Connection with
